# Signalsandsystems

./: .env  clean.py  full_macro_data_2000_2025.csv  main.py  pyproject.toml  vix_data_2000_2025.csv
data/fama_french/: ff_factors_daily_2000-01-01_2025-12-24.pkl
data/fred/: inflation_data_2000-01-01_2025-12-31.pkl  macro_data_2000-01-01_2025-12-31.pkl
docs/: index.html
fama_french_data/: FF3_daily_2000-01-01_to_2025-12-22.csv  FF5_daily_2000-01-01_to_2025-12-22.csv  Industry_10_daily_2000-01-01_to_2025-12-22.csv  Industry_10_daily_2000-01-01_to_2025-12-24.csv  MOM_daily_2000-01-01_to_2025-12-22.csv
